Feat: Add chromium windowrule

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -282,9 +282,10 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 windowrulev2=noblur,class:^()$,title:^()$
 
 windowrulev2 = workspace 2, class:(Brave-browser)
+windowrulev2 = workspace 2, class:(Chromium)
 windowrulev2 = workspace 2, class:(firefox)
 windowrulev2 = workspace 2, class:(Mullvad Browser)
 windowrulev2 = workspace 2, class:(zen)
 
-windowrulev2 = workspace 3, class:(foot)
 windowrulev2 = workspace 3, class:(com.mitchellh.ghostty)
+windowrulev2 = workspace 3, class:(foot)
